Fix widgets overlap on footer

--- a/themes/default/assets/css/main.css
+++ b/themes/default/assets/css/main.css
@@ -1,3 +1,7 @@
+#page-wrapper{
+	overflow: hidden;
+}
+
 footer{
 	text-align: center;
 	border: 1px solid #e7e7e7;
